src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_empty_worker_empty_output_buffer.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [5.2: core] ────────────────────────────────╮
│● implement                                     │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
