src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_empty_worker_with_task_id_no_component_no_model.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W2 [42.1] ─────────────────────────────────────╮
│● implementing                                  │
│                                                │
│                                                │
│                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
