src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_extremely_long_both_task_id_and_component.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [feature.authentication.oauth2.implementation.backend.╮
│◎ reviewing                                               │
│                                                          │
│                                                          │
│                                                          │
╰ $12.3456 │ ↓50.0k ↑25.0k ────────────────────────────────╯
