src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_extremely_long_component_width_40.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [2.1: authentication-and-authoriza╮
│● implementing                        │
│                                      │
│                                      │
│                                      │
╰ $0.1230 │ ↓2.0k ↑1.0k ───────────────╯
