src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_focused_with_model.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╔ ▶ W1 [4.1: cli] (sonnet) ══════════════════════╗
║● implementing                                  ║
║                                                ║
║                                                ║
╚ $0.0250 │ ↓3.0k ↑1.2k ═════════════════════════╝
