src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_footer_cost_tokens.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W1 [1.1] ──────────────────────────────────────╮
│◎ reviewing                                     │
│                                                │
│                                                │
╰ $0.0420 │ ↓1.5k ↑2.3k ─────────────────────────╯
