src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_grace_period_dimming.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W2 [---] ──────────────────────────────────────╮
│○ idle                                          │
│                                                │
│                                                │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
