src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__panels__tests__snapshot_minimal_height_4.snap
---
source: src/commands/task/orchestrate/panels.rs
expression: snapshot
---
╭ W2 [17] ───────────────────────────────────────╮
│● implement                                     │
│Second line (hidden)                            │
╰ $0.0000 │ ↓0 ↑0 ───────────────────────────────╯
